--- a/hello-world/jsconfig.json
+++ b/hello-world/jsconfig.json
@@ -7,13 +7,20 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      
     },
     "lib": [
       "esnext",
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
-  }
+    ],
+    
+  },
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "dist"
+  ]
 }
