--- a/portfolio/netlify.toml
+++ b/portfolio/netlify.toml
@@ -1,4 +1,4 @@
 [[redirects]]
   from = "/*"
-  to = "/src/views/PageNotFound.vue" #-change-path-here-and-delete-this-comment
+  to = "/src/views/PageNotFound.vue"
   status = 404
