--- a/hrsoft/package.json
+++ b/hrsoft/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "sass": "^1.63.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-autocounter": "^1.0.6",
