--- a/hrsoft/package.json
+++ b/hrsoft/package.json
@@ -11,7 +11,6 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
-    "sass": "^1.63.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-autocounter": "^1.0.6",
@@ -30,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass": "^1.63.6",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
